--- a/gamble.css
+++ b/gamble.css
@@ -36,14 +36,14 @@ body{
 }
 
 .main-container{
-    aspect-ratio: 16 / 9;
-    height: 100%;
-    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     background-color: green;
     font-size: 1em;
+    border: 2px solid #fff;
 }
 
 header{
