--- a/gamble.css
+++ b/gamble.css
@@ -4,27 +4,6 @@
     box-sizing: border-box;
 }
 
-::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-}
-  
-::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 10px;
-}
-   
-::-webkit-scrollbar-thumb {
-    background: #888; 
-    border-radius: 10px;
-}
-  
-::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-    cursor: pointer;
-}
-
 body{
     background-color: rgb(0, 0, 0);
     color: #fff;
@@ -41,27 +20,29 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: green;
+    background-color: #0f650f;
     font-size: 1em;
-    border: 2px solid #fff;
+    border: 5px solid #6f2a05;
 }
 
 header{
     width: 100%;
-    height: 17%;
+    height: 15%;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 5%;
+    padding: 0 10px;
 }
 
 .history-text{
-    padding: 10px;
+    padding: 0.5%;
+    font-size: 0.8em;
 }
 
 .history-canvas{
-    height: 80px;
-    padding: 5px 8px;
+    height: 90%;
+    padding: 0.5%;
     aspect-ratio: 4 / 1;
     overflow-x: auto;
     display: flex;
@@ -70,47 +51,32 @@ header{
     gap: 20px;
 }
 
-.circle{
-    border-radius: 50%;
-    min-height: 30px;
-    min-width: 30px;
-}
-
 .game{
     width: 100%;
     height: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 30px;
+    gap: 5%;
 }
 
 .main-canvas{
-    height: 250px;
+    height: 100%;
     aspect-ratio: 1 / 1.5;
 }
 
-.game-section{
-    width: 30%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-
 .buttons{
-    width: 350px;
+    width: 25%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 10%;
 }
 
 .btn{
-    height: 60px;
+    height: 20%;
     aspect-ratio: 2 / 1;
     border-radius: 5px;
     border: none;
@@ -121,10 +87,11 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 0.75em;
 }
 
 .btn:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 .btn:active{
@@ -133,7 +100,7 @@ header{
 }
 
 .display{
-    height: 65px;
+    height: 25%;
     aspect-ratio: 2 / 1;
     border: 1px solid #111;
     background-color: #fff;
@@ -148,157 +115,75 @@ header{
 }
 
 .values{
-    height: 20%;
+    height: 15%;
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 5%;
     align-items: center;
 }
 
 .values-container{
     display: flex;
     flex-direction: column;
-    gap: 5px;
     align-items: center;
+    justify-content: space-evenly;
+    height: 100%;
+    font-size: 0.8em;
 }
 
-@media (orientation: landscape){
-
-    @media (max-width: 650px){
-        .buttons{
-            width: 250px;
-        }
+@media(orientation: portrait){
+    header{
+        padding: 0 5px;
     }
 
-    @media(max-width: 450px){
-        .main-container{
-            font-size: 0.7em;
-            justify-content: center;
-            gap: 10px;
-        }
-
-        .main-canvas{
-            height: 180px;
-        }
-
-        header{
-            gap: 10px;
-        }
-
-        .buttons{
-            width: 250px;
-        }
-
-        .btn, .display{
-            height: 40px;
-        }
+    .history-text{
+        font-size: 0.65em;
     }
 
-    @media(max-height: 400px){
-        .main-canvas{
-            height: 200px;
-        }
+    .game{
+        height: 65%;
+        flex-direction: column;
+        gap: 2%;
     }
 
-    @media(max-height: 300px){
-        .btn, .display{
-            height: 30px;
-        }
-
-        .game{
-            height: 60%;
-        }
-
-        .buttons{
-            width: 40%;
-            gap: 10px;
-        }
-
-    }
-}
-
-@media (orientation: portrait){
-    @media(max-width: 600px){
-        header{
-            height: 15%;
-        }
-
-        .game{
-            flex-direction: column;
-            height: 70%;
-        }
-
-        .buttons{
-            flex-direction: row;
-            height: 15%;
-            width: 100%;
-            padding: 0 5px;
-        }
-
-        .btn, .display{
-            width: 25%;
-            height: 90%;
-        }
-
-        .values{
-            height: 15%;
-        }
+    .main-canvas{
+        height: 65%;
     }
 
-    @media(max-width: 400px){
-        
-        header{
-            gap: 0;
-        }
-
-        .main-container{
-            justify-content: center;
-            gap: 10px;
-        }
-
-        .game{
-            height: 60%;
-        }
-
-        .values{
-            flex-direction: column;
-            gap: 7px;
-        }
-
-        .values-container{
-            flex-direction: row;
-        }
+    .buttons{
+        height: 20%;
+        flex-direction: row;
+        width: 100%;
+        gap: 5%;
     }
 
-    @media(max-width: 350px){
+    .btn{
+        height: 50%;
+        width: 25%;
+        font-size: 0.6em;
+    }
 
-        .main-container{
-            font-size: 0.6em;
-        }
+    .display{
+        height: 60%;
+        width: 30%
+    }
 
-        header{
-            justify-content: center;
-            padding-left: 5px;
-        }
+    .display-text{
+        font-size: 0.6em
+    }
 
-        .game{
-            justify-content: center;
-            gap: 10px;
-            height: 55%;
-        }
+    .values{
+        height: 20%;
+        flex-direction: column;
+    }
 
-        .values{
-            gap: 5px;
-        }
-
-        .values-container{
-            justify-content: center;
-            gap: 5px;
-        }
-
-        .history-text{
-            padding: 3px;
-        }
+    .values-container{
+        height: 30%;
+        width: 100%;
+        flex-direction: row;
+        justify-content: center;
+        gap: 10%;
+        font-size: 0.7em;
     }
 }
 
