--- a/gamble.css
+++ b/gamble.css
@@ -20,14 +20,13 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: #0f650f;
+    background-color: #074607;
     font-size: 1.1em;
-    border: 5px solid #6f2a05;
 }
 
 header{
     width: 100%;
-    height: 20%;
+    height: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,8 +39,8 @@ header{
 }
 
 .history-canvas{
-    height: 90%;
-    width: 40%;
+    height: 95%;
+    aspect-ratio: 5 / 1.5;
     padding: 0.5%;
     overflow-x: auto;
     display: flex;
@@ -59,7 +58,7 @@ header{
 }
 
 .main-canvas{
-    height: 100%;
+    max-height: 100%;
     aspect-ratio: 1 / 1.5;
 }
 
@@ -107,7 +106,7 @@ header{
 }
 
 .display-text{
-    color: green;
+    color: #074607;
 }
 
 .values{
@@ -129,11 +128,7 @@ header{
 @media(orientation: portrait){
     header{
         padding: 0 2%;
-        height: 13%;
-    }
-
-    .history-canvas{
-        width: 90%;
+        height: 20%;
     }
 
     .game{
